--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,6 +18,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    background: rgba(0,0,0,0.6);
 }
 /* body{
     background: url('/images/main.jpg');
