--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,29 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Yesteryear&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Yesteryear&display=swap");
 
 /* 'reset' padding/margin  */
-*{
+* {
     /* border-box keeps padding moving inward instead of outward */
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-.showcase{
-    background: url('/images/main.jpg') no-repeat center center/cover;
+body {
+    font-family: "Yesteryear", sans-serif;
+}
+
+.showcase {
+    background: url("/images/main.jpg") no-repeat center center/cover;
     height: 100vh;
     /* must be set relative for child to be absolute */
     position: relative;
     color: #fff;
 }
 
-.showcase::before{
-    content: '';
+.showcase::before {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,.6);
+    background: rgba(0, 0, 0, 0.6);
 }
 /* body{
     background: url('/images/main.jpg');
