--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Yesteryear&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 
 /* 'reset' padding/margin  */
 * {
@@ -9,7 +10,14 @@
 }
 
 body {
-    font-family: "Yesteryear", sans-serif;
+    font-family: "Raleway", sans-serif;
+    background: #fff;
+    color: #333;
+    line-height: 1.6;
+}
+
+body .logo {
+    font-family: "Rock Salt", cursive;
 }
 
 .showcase {
