--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,31 +29,10 @@ a {
     text-decoration: none;
 }
 
-.navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #444;
-    color: #fff;
-    opacity: 0.8;
-}
-
-.navbar a {
-    color: #fff;
-    padding: 10px 20px;
-    margin: 0 5px;
-}
-
-.navbar ul {
-    display: flex;
-}
-
-.navbar .logo {
-    font-weight: 100;
-}
-
-.navbar a:hover {
-    border: #555 2px solid;
+h1,
+h2 {
+    font-weight: 300;
+    line-height: 1.2;
 }
 
 .showcase {
@@ -71,7 +50,26 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.7);
+    /* z-index: -1; */
+}
+
+.showcase * {
+    z-index: 10;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    height: 100%;
+    text-align: center;
+}
+
+.showcase .content h1 {
+    font-size: 55px;
 }
 /* body{
     background: url('/images/main.jpg');
