--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,6 +35,14 @@ h2 {
     line-height: 1.2;
 }
 
+p {
+    margin: 10px 0;
+}
+
+img {
+    width: 100%;
+}
+
 .showcase {
     background: url("/images/main.jpg") no-repeat center center/cover;
     height: 100vh;
@@ -71,6 +79,24 @@ h2 {
 .showcase .content h1 {
     font-size: 55px;
 }
-/* body{
-    background: url('/images/main.jpg');
-} */
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 200px;
+}
+
+.footer a {
+    color: #fff;
+}
+
+.footer a:hover {
+    color: #bd2b32;
+}
+
+.footer .social > * {
+    margin-right: 30px;
+}
