--- a/CSS/utilities.css
+++ b/CSS/utilities.css
@@ -12,6 +12,11 @@
     color: #fff;
 }
 
+.bg-dark {
+    background-color: #333;
+    color: #fff;
+}
+
 .flex-columns.flex-reverse .row {
     flex-direction: row-reverse;
 }
@@ -37,7 +42,8 @@
 }
 
 .flex-columns .column .column-1,
-.flex-columns .column .column-2 {
+.flex-columns .column .column-2,
+.flex-columns .column .column-3 {
     height: 100%;
 }
 
